--- a/src/config.json
+++ b/src/config.json
@@ -1,9 +1,16 @@
 {
-  "title": "Futurama Quiz App",
+  "title": "The Planet Express Quiz",
+  "titleColor": "#333",
   "quizLogo": "planet-express.png",
+  "subtext": "Welcome to the Quiz. ",
+  "subtext2": "Try to get as many questions right as you can.",
+  "subtextColor": "#000",
+  "startButtonText": "Get Started",
   "backgroundImage": "background.jpg",
-  "containerColor": "#ffffff",
-  "accentColor": "#e74c3c",
+  "containerColor": "#fff",
+  "buttonColor": "#e74c3c",
+  "buttonHoverColor": "#e56357",
+  "buttonTextColor": "#fff",
   "questions": [
     {
       "body": "In 'Space Pilot 3000' who is the first main character that Fry meets?",
