add quiz finish page and config, add reset functionality

--- a/src/config.json
+++ b/src/config.json
@@ -21,6 +21,9 @@
   "correctAnswerText": "Correct!",
   "incorrectAnswerText": "Incorrect, the correct answer was:",
   "questionNotAnsweredText": "Doh! you forgot to choose an answer.",
+  "resultsHeader": "Results",
+  "congratsGif": "congrats.gif",
+  "startOverButtonText": "Start Over",
   "questions": [
     {
       "body": "In 'Space Pilot 3000' who is the first main character that Fry meets?",
